# LOL_teamfight_Lab

./: .gitignore  LICENSE  README.md  __init__.py  analysis.py  baseline.py  cache_io.py  common.py  common_torch.py  config.py  config_legacy.py  contract.py  dataset.py  deep.py  diagnostics.py  events_index.py  experiment.py  experiment_runner.py  feature_contract.py  features.py  fight_types.py  fights.py  file_io.py  fusion.py  improvements.py  index_split.py  indexing.py  labels.py  logits.py  main.py  models.py  paper_experiment_plan.py  pipeline.py  pyproject.toml  ram_cache.py  requirements.txt  roles.py  run_paper_full.py  runner.py  speed.py  (+5 more)
analysis/: analysis.py  feature_ablation.py  llm_strategic_interpretation.py  mlp_ablation.py  phase_stratified_shap.py  shap_role_rollup.py  teamfight_duration_investigation.py
app/: analysis.py  analysis_metrics.py  analysis_plotting.py  analysis_reporting.py  detection_quality_report.py  experiment.py  experiment_exec_helpers.py  experiment_helpers.py  experiment_io.py  experiment_runner_io.py  experiment_runtime.py  experiment_stats.py  experiment_types.py  split_reports.py
core/: common.py  common_torch.py  config.py  config_legacy.py  contract.py  diagnostics.py  feature_contract.py  fight_types.py  improvements.py  interpolation.py  memory.py  roles.py  time_contract.py  timeutils.py  utils.py
data/: cache_io.py  dataset.py  events_index.py  file_io.py  index_split.py  indexing.py  labels.py  logits.py  memmap_cache.py  ram_cache.py
docs/: AUDIT.md  CoG2026_Paper.md  EXPERIMENT.md  FEATURES.md  MODELS.md  (+4 more)
(+50 files in other folders)
