[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-teamfight-lab"
version = "0.1.0"
description = "ML pipeline for predicting League of Legends teamfight outcomes"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
analysis = [
    "shap>=0.41.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "anthropic>=0.40.0",
]
all = [
    "lol-teamfight-lab[dev,analysis]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
